--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,8 @@
     position: fixed;
   }
 
-  .modal {
+  .widget {
+    position: fixed !important;
     background-color: #1f1f23;
     user-select: none;
     touch-action: none;
@@ -22,7 +23,7 @@
     justify-content: center;
   }
 
-  .modal-container {
+  .widget-container {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: lighter;
     font-size: 20px;
