--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,9 +3,14 @@
   top: 0;
   width: 100%;
   height: 100%;
+  cursor: grab;
 
   &.moved {
     position: fixed;
+  }
+
+  &.grabbing {
+    cursor: grabbing;
   }
 
   .widget {
